# sesph

./: Cargo.toml  LICENSE  README.md
src/: grid.rs  kernel.rs  kernels.rs  lib.rs  main.rs  particle.rs  utils.rs
