[package]
name = "sph4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.31"
glam = "0.20"
lazy_static = "1.4"
cgmath = "0.18"
rand = "0.8"
rayon = "1.5"
log = "0.4"
arrayvec = "0.7"
env_logger = "0.9"

[dev-dependencies]
criterion = "0.3"

[build]
rustflags = ["-C", "target-cpu=native"]
