[package]
name = "mueller-sph-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
glium = "0.31"
glam = "0.20"
lazy_static = "1.4"
cgmath = "0.18"
rand = "0.8"
rayon = "1.5"
log = "0.4"
arrayvec = "0.7"
env_logger = "0.9"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false

[build]
rustflags = ["-C", "target-cpu=native"]

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
debug = 0
strip = true
